filters/session-query-rewrite/envoy-filter-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gw-session-query-rewrite
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway
  configPatches:
    # Add rust filter to the http connection manager
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: session-query-rewrite
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                vm_config:
                  runtime: envoy.wasm.runtime.v8
                  vm_id: session-query-rewrite-0.1
                  code:
                    local:
                      filename: /var/lib/wasm/session_query_rewrite_module.wasm
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "vhost": "sessions.mux.local",
                      "routes": [
                        "/input",
                        "/read"
                      ],
                      "host_rewrite_header": "X-RewriteSessionsHost"
                    }

    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            name: "sessions.mux.local:80"
            route:
              name: .sessions.input
      patch:
        operation: MERGE
        value:
          match:
            prefix: "/input"
          route:
            prefix_rewrite: "/"
            cluster: sessions_dynamic_forward_proxy_cluster
            retry_policy:
              retry_on: gateway-error,connect-failure,refused-stream,retriable-status-codes,reset
              num_retries: 3
              retry_back_off:
                base_interval: 400ms
              retriable_status_codes:
                - 503
          typed_per_filter_config:
            envoy.filters.http.dynamic_forward_proxy:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
              host_rewrite_header: X-RewriteSessionsHost

    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            name: "sessions.mux.local:80"
            route:
              name: .sessions.read
      patch:
        operation: MERGE
        value:
          match:
            prefix: "/read"
          route:
            prefix_rewrite: "/"
            cluster: sessions_dynamic_forward_proxy_cluster
            retry_policy:
              retry_on: gateway-error,connect-failure,refused-stream,retriable-status-codes,reset
              num_retries: 3
              retry_back_off:
                base_interval: 400ms
              retriable_status_codes:
                - 503
          typed_per_filter_config:
            envoy.filters.http.dynamic_forward_proxy:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.PerRouteConfig
              host_rewrite_header: X-RewriteSessionsHost

    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          # portNumber: 80
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.dynamic_forward_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
            dns_cache_config:
              name: sessions_dynamic_forward_proxy_cache_config
              dns_lookup_family: V4_ONLY
              dns_failure_refresh_rate:
                base_interval: 5ms

    - applyTo: CLUSTER
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value: # cluster specification
          name: sessions_dynamic_forward_proxy_cluster
          lb_policy: CLUSTER_PROVIDED
          cluster_type:
            name: envoy.clusters.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
              dns_cache_config:
                name: sessions_dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
                dns_failure_refresh_rate:
                  base_interval: 5ms
          # transport_socket:
          #   name: envoy.transport_sockets.tls
          #   typed_config:
          #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          #     common_tls_context:
          #       validation_context:
          #         trusted_ca: { filename: /etc/ssl/certs/ca-certificates.crt }
